pulling plugins into parent