@@ -121,67 +121,11 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>gmaven-plugin</artifactId>
-                <version>1.5</version>
-                <configuration>
-                    <source>2.0</source>
-                    <providerSelection>2.0</providerSelection>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <!--<goal>generateStubs</goal>-->
-                            <!--<goal>compile</goal>-->
-                            <goal>generateTestStubs</goal>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
                 <configuration>
                     <warName>photopile</warName>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.13</version>
-                <configuration>
-                    <excludedGroups>com.stehno.photopile.dao.Integration</excludedGroups>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.13</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <groups>com.stehno.photopile.dao.Integration</groups>
-                    <includes>
-                        <include>**/*Test.*</include>
-                    </includes>
                 </configuration>
             </plugin>
 
@@ -214,95 +158,6 @@
                     <password>photopile</password>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <reportPlugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-project-info-reports-plugin</artifactId>
-                            <version>2.2</version>
-                            <reports>
-                                <report>index</report>
-                                <report>project-team</report>
-                                <report>license</report>
-                                <report>mailing-list</report>
-                                <report>dependencies</report>
-                                <report>dependency-convergence</report>
-                                <report>plugin-management</report>
-                                <report>cim</report>
-                                <report>issue-tracking</report>
-                                <report>scm</report>
-                                <report>summary</report>
-                            </reports>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-report-plugin</artifactId>
-                            <version>2.13</version>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <version>2.9</version>
-                        </plugin>
-                        <!--<plugin>-->
-                            <!--<groupId>org.apache.maven.plugins</groupId>-->
-                            <!--<artifactId>maven-checkstyle-plugin</artifactId>-->
-                            <!--<version>2.9.1</version>-->
-                            <!--<configuration>-->
-                                <!--<configLocation>http://stud.hs-heilbronn.de/~nischmid/development/checkstyle-config.xml</configLocation> ;-->
-                            <!--</configuration>-->
-                        <!--</plugin>-->
-                        <plugin>
-                          <groupId>org.codehaus.mojo</groupId>
-                          <artifactId>findbugs-maven-plugin</artifactId>
-                          <version>2.5.2</version>
-                          <configuration>
-                            <argLine>-Xmx256m</argLine>
-                            <argLine>-XX:MaxPermSize=256m</argLine>
-                          </configuration>
-                          <!-- Usually findbugs needs a lot of memory, change these values if needed. -->
-                        </plugin>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>jdepend-maven-plugin</artifactId>
-                            <version>2.0-beta-2</version>
-                        </plugin>
-                        <!--<plugin>-->
-                            <!--<groupId>org.codehaus.mojo</groupId>-->
-                            <!--<artifactId>cobertura-maven-plugin</artifactId>-->
-                            <!--<version>2.5.2</version>-->
-                        <!--</plugin>-->
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>taglist-maven-plugin</artifactId>
-                            <version>2.4</version>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-jxr-plugin</artifactId>
-                            <version>2.1</version>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-pmd-plugin</artifactId>
-                            <version>2.7.1</version>
-                            <configuration>
-                                <linkXref>true</linkXref>
-                                <minimumTokens>100</minimumTokens>
-                                <minimumPriority>3</minimumPriority>
-                                <!-- Change minimum priority to see more or less messages -->
-                                <targetJdk>1.7</targetJdk>
-                            </configuration>
-                        </plugin>
-                    </reportPlugins>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
 
